# pears

./: .gitignore  CHANGELOG.md  LICENSE.txt  Procfile  ReadMe  ReadMe.md  TODO.md  app.py  pyproject.toml  requirements.txt
.github/: build-deploy.yml
.github/workflows/: build-deploy.yml  test.yml  tests.yml
app/: fitting.py  main.py  models.py  plot.py  resources.py  utils.py
app/.streamlit/: config.toml
app/utility/: data.py  dict.py  numbers.py  project.py
core/: __init__.py  fitting.py  models.py  plot.py  resources.py  tests.py  utils.py
reports/coverage/: .coverage  coverage.xml
reports/coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2f81be5cb76b9f01___init___py.html  z_2f81be5cb76b9f01_data_py.html  z_2f81be5cb76b9f01_dict_py.html  z_2f81be5cb76b9f01_numbers_py.html  z_2f81be5cb76b9f01_project_py.html  z_576898f4db35b0e7___init___py.html  z_576898f4db35b0e7_test_data_py.html  z_576898f4db35b0e7_test_dict_py.html  z_576898f4db35b0e7_test_numbers_py.html  z_576898f4db35b0e7_test_project_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_fitting_py.html  (+10 more)
reports/tests/: report.html  tests.xml
resources/: style.css
resources/data/: BTD_TRMC.txt  BTD_TRMC_perfect.txt  BTD_TRPL_data.txt  BT_TRPL_data.txt  BT_TRPL_processed.txt  incomplete_data.csv  large_background.txt  test_file.txt
tests/: __test_app.py  conftest.py  test_fitting.py  test_main.py  test_models.py  test_plot.py  test_utils.py
tests/utility/: test_data.py  test_dict.py  test_numbers.py  test_project.py
